--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,17 @@
 buildscript {
+    ext {
+        compose_version = '1.1.1'
+    }
     repositories {
         google()
         mavenCentral()
+        gradlePluginPortal()
     }
 
     dependencies {
         classpath 'com.android.tools.build:gradle:7.1.2'
+        classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10'
+        classpath "com.mikepenz.aboutlibraries.plugin:aboutlibraries-plugin:10.0.0"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -16,6 +22,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
+        gradlePluginPortal()
     }
 }
 
@@ -29,6 +36,8 @@ tasks.register("updateGradleWrapper", Wrapper) {
 //==================================================================================================
 
 apply plugin: 'com.android.application'
+apply plugin: 'org.jetbrains.kotlin.android'
+apply plugin: 'com.mikepenz.aboutlibraries.plugin'
 
 android {
     compileSdkVersion 30
@@ -49,6 +58,9 @@ android {
 
         renderscriptTargetApi 19
         renderscriptSupportModeEnabled true
+        vectorDrawables {
+            useSupportLibrary true
+        }
     }
 
     buildTypes {
@@ -104,6 +116,9 @@ android {
         exclude 'META-INF/LICENSE-FIREBASE.txt'
         exclude 'META-INF/NOTICE.txt'
         exclude '.readme'
+        resources {
+            excludes += '/META-INF/{AL2.0,LGPL2.1}'
+        }
     }
 
     sourceSets {
@@ -118,13 +133,22 @@ android {
             resources.srcDirs = ['res']
         }
     }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
+    buildFeatures {
+        compose true
+    }
+    composeOptions {
+        kotlinCompilerExtensionVersion compose_version
+    }
 }
 
 dependencies {
     // AndroidX - https://developer.android.com/jetpack/androidx/releases
 
     // see https://developer.android.com/jetpack/androidx/releases/appcompat
-    implementation "androidx.appcompat:appcompat:1.3.0"
+    implementation "androidx.appcompat:appcompat:1.4.1"
 
     // see https://developer.android.com/jetpack/androidx/releases/cardview
     implementation "androidx.cardview:cardview:1.0.0"
@@ -133,14 +157,40 @@ dependencies {
     implementation "androidx.palette:palette:1.0.0"
 
     // see https://developer.android.com/jetpack/androidx/releases/preference
-    implementation "androidx.preference:preference:1.1.1"
+    implementation "androidx.preference:preference:1.2.0"
 
     // see https://developer.android.com/jetpack/androidx/releases/recyclerview
     implementation "androidx.recyclerview:recyclerview:1.2.1"
 
     // see https://developer.android.com/jetpack/androidx/releases/constraintlayout
-    implementation "androidx.constraintlayout:constraintlayout:2.0.4"
+    implementation "androidx.constraintlayout:constraintlayout:2.1.3"
+
+    // Jetpack Compose - https://developer.android.com/jetpack/compose
+
+    implementation "androidx.compose.ui:ui:$compose_version"
+    implementation "androidx.compose.material:material:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
+    implementation 'androidx.activity:activity-compose:1.4.0'
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+
+    // Material Design - https://material.io/ and https://m3.material.io/
 
     // see https://github.com/material-components/material-components-android/releases
-    implementation "com.google.android.material:material:1.4.0"
+    implementation "com.google.android.material:material:1.5.0"
+
+    // Third-party libs
+
+    // see https://github.com/javiersantos/AppUpdater/releases
+    implementation "com.github.javiersantos:AppUpdater:2.7"
+
+    // see https://github.com/PureWriter/about-page/releases
+    implementation 'com.drakeet.about:about:2.5.0'
+    implementation 'com.drakeet.multitype:multitype:4.3.0'
+
+    // see https://github.com/mikepenz/AboutLibraries/releases
+    implementation "com.mikepenz:aboutlibraries-core:10.0.0"
+    implementation "com.mikepenz:aboutlibraries-compose:10.0.0"
+
 }
