--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ buildscript {
         google()
         mavenCentral()
         gradlePluginPortal()
+        maven { url 'https://jitpack.io' }
     }
 
     dependencies {
@@ -23,6 +24,7 @@ allprojects {
         google()
         mavenCentral()
         gradlePluginPortal()
+        maven { url 'https://jitpack.io' }
     }
 }
 
