--- a/build.gradle
+++ b/build.gradle
@@ -136,9 +136,6 @@ android {
     composeOptions {
         kotlinCompilerExtensionVersion compose_version
     }
-    configurations {
-        all*.exclude group: 'androidx.appcompat', module: 'appcompat'
-    }
 }
 
 dependencies {
@@ -147,7 +144,7 @@ dependencies {
 
 
     // see https://developer.android.com/jetpack/androidx/releases/appcompat
-
+    implementation 'androidx.appcompat:appcompat:1.5.0'
 
     // see https://developer.android.com/jetpack/androidx/releases/cardview
     implementation "androidx.cardview:cardview:1.0.0"
@@ -196,5 +193,6 @@ dependencies {
     implementation "com.mikepenz:aboutlibraries-core:10.0.1"
     implementation "com.mikepenz:aboutlibraries-compose:10.0.1"
     implementation 'dev.rikka.rikkax.material:material:2.2.0'
-
+    // see https://github.com/jpbandroid/appcompat
+    implementation 'com.github.jpbandroid:appcompat:1.0.1'
 }
