--- a/build.gradle
+++ b/build.gradle
@@ -171,6 +171,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
     implementation 'androidx.activity:activity-compose:1.4.0'
     implementation 'androidx.databinding:viewbinding:7.2.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
 
