--- a/build.gradle
+++ b/build.gradle
@@ -158,44 +158,44 @@ dependencies {
     implementation "androidx.preference:preference:1.2.0"
 
     // see https://developer.android.com/jetpack/androidx/releases/recyclerview
-    implementation "androidx.recyclerview:recyclerview:1.2.1"
+    implementation 'androidx.recyclerview:recyclerview:1.3.0-rc01'
 
     // see https://developer.android.com/jetpack/androidx/releases/constraintlayout
-    implementation "androidx.constraintlayout:constraintlayout:2.1.3"
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0-alpha04'
 
     // Jetpack Compose - https://developer.android.com/jetpack/compose
 
-    implementation "androidx.compose.ui:ui:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.4.1'
-    implementation 'androidx.activity:activity-compose:1.4.0'
-    implementation 'androidx.databinding:viewbinding:7.2.0'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+    implementation "androidx.compose.ui:ui:1.3.0-rc01"
+    implementation "androidx.compose.material:material:1.3.0-rc01"
+    implementation "androidx.compose.ui:ui-tooling-preview:1.3.0-rc01"
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.0-alpha02'
+    implementation 'androidx.activity:activity-compose:1.7.0-alpha01'
+    implementation 'androidx.databinding:viewbinding:7.4.0-beta02'
+    implementation 'androidx.appcompat:appcompat:1.7.0-alpha01'
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:1.3.0-rc01"
+    debugImplementation "androidx.compose.ui:ui-tooling:1.3.0-rc01"
 
     // Material Design - https://material.io/ and https://m3.material.io/
 
     // see https://github.com/material-components/material-components-android/releases
-    implementation "com.google.android.material:material:1.6.0"
+    implementation 'com.google.android.material:material:1.8.0-alpha01'
 
     // Third-party libs
 
     implementation "com.google.accompanist:accompanist-insets-ui:0.23.1"
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.23.1"
-    implementation 'dev.rikka.rikkax.material:material:2.2.0'
+    implementation 'dev.rikka.rikkax.material:material:2.5.1'
 
     // see https://github.com/javiersantos/AppUpdater/releases
     implementation "com.github.javiersantos:AppUpdater:2.7"
 
     // see https://github.com/PureWriter/about-page/releases
-    implementation 'com.drakeet.about:about:2.5.1'
+    implementation 'com.drakeet.about:about:2.5.2'
     implementation 'com.drakeet.multitype:multitype:4.3.0'
 
     // see https://github.com/mikepenz/AboutLibraries/releases
-    implementation "com.mikepenz:aboutlibraries-core:10.2.0"
-    implementation "com.mikepenz:aboutlibraries-compose:10.2.0"
+    implementation 'com.mikepenz:aboutlibraries-core:10.5.0'
+    implementation 'com.mikepenz:aboutlibraries-compose:10.5.0'
 
     // see https://github.com/jpbandroid/appcompat
     implementation 'com.github.jpbandroid:appcompat:1.0.1'
