--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     ext {
-        compose_version = '1.2.1'
+        compose_version = '1.3.2'
+        kotlin_version = '1.7.20'
     }
     repositories {
         google()
@@ -12,7 +13,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:7.3.0'
         classpath 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.7.20'
-        classpath "com.mikepenz.aboutlibraries.plugin:aboutlibraries-plugin:10.5.0"
+        classpath "com.mikepenz.aboutlibraries.plugin:aboutlibraries-plugin:10.5.1"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -55,8 +56,8 @@ android {
         minSdkVersion 28
         targetSdkVersion 33
 
-        versionCode 500
-        versionName '5.0.0'
+        versionCode 501
+        versionName '5.0.1'
 
         vectorDrawables {
             useSupportLibrary true
@@ -158,7 +159,7 @@ dependencies {
     implementation "androidx.preference:preference:1.2.0"
 
     // see https://developer.android.com/jetpack/androidx/releases/recyclerview
-    implementation "androidx.recyclerview:recyclerview:1.2.1"
+    implementation 'androidx.recyclerview:recyclerview:1.3.0-rc01'
 
     // see https://developer.android.com/jetpack/androidx/releases/constraintlayout
     implementation 'androidx.constraintlayout:constraintlayout:2.2.0-alpha04'
@@ -194,8 +195,8 @@ dependencies {
     implementation 'com.drakeet.multitype:multitype:4.3.0'
 
     // see https://github.com/mikepenz/AboutLibraries/releases
-    implementation 'com.mikepenz:aboutlibraries-core:10.5.0'
-    implementation 'com.mikepenz:aboutlibraries-compose:10.5.0'
+    implementation 'com.mikepenz:aboutlibraries-core:10.5.1'
+    implementation 'com.mikepenz:aboutlibraries-compose:10.5.1'
 
     // see https://github.com/jpbandroid/appcompat
     implementation 'com.github.jpbandroid:appcompat:1.0.1'
